@@ -57,6 +57,11 @@ void NativeResolver::upgrade()
 	__impl->upgrade();
 }
 
+void NativeResolver::setAutomaticallyInstalledFlag(const string& packageName, bool flagValue)
+{
+	__impl->setAutomaticallyInstalledFlag(packageName, flagValue);
+}
+
 bool NativeResolver::resolve(Resolver::CallbackType callback)
 {
 	return __impl->resolve(callback);
