@@ -25,6 +25,7 @@ cupt (2.6.0~) UNRELEASED; urgency=low
     - system/resolver:
       - [API break] SuggestedPackage: new field 'automaticallyInstalledFlag',
         removed old field 'manuallySelected'.
+      - New method 'setAutomaticallyInstalledFlag'.
   * debian:
     - control:
       - Bumped the library API version.
